[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/textures/backgrounds/stage1sky.png" type="Texture" id=1]
[ext_resource path="res://Resources/fonts/poco/Poco.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MainMenu.gd" type="Script" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1020, 1280 )

[sub_resource type="DynamicFont" id=3]
size = 40
extra_spacing_bottom = 16
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 27
extra_spacing_bottom = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
extra_spacing_bottom = 9
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="PanelContainer" parent="."]
show_behind_parent = true
margin_right = 800.0
margin_bottom = 1024.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostLobby" type="Control" parent="."]
margin_right = 800.0
margin_bottom = 1024.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoloButton" type="Button" parent="HostLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -32.0
margin_right = 150.0
margin_bottom = 32.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Singleplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostGameButton" type="Button" parent="HostLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = 96.0
margin_right = 150.0
margin_bottom = 166.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Host Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="HostLobby"]
anchor_left = 0.5
anchor_top = 0.961
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -280.064
margin_right = 24.0
margin_bottom = -280.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Back"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreen" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="TitleScreen"]
margin_left = 56.0
margin_top = 512.0
margin_right = 368.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 2 )
text = "Host/Singleplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="TitleScreen"]
margin_left = 440.0
margin_top = 512.0
margin_right = 752.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 2 )
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderBoardButton" type="Button" parent="TitleScreen"]
margin_left = 272.0
margin_top = 624.0
margin_right = 532.0
margin_bottom = 694.0
custom_fonts/font = SubResource( 2 )
text = "Leaderboards"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HostLobby/SoloButton" to="." method="_on_SoloButton_pressed"]
[connection signal="pressed" from="HostLobby/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="TitleScreen/HostButton" to="." method="_on_HostButton_pressed"]
